--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,11 +7,13 @@
 <body>
 <div id="content">
     Welcome to my software
+    <a href="#" id="goWorking">goWorking</a>
 </div>
 
 <script src="webjars/jquery/3.4.1/dist/jquery.min.js"></script>
 <script src="webjars/underscore/1.9.1/underscore-min.js"></script>
 <script src="webjars/backbone/1.4.0/backbone-min.js"></script>
-<script data-main="js/main" src="webjars/requirejs/2.3.6/require.min.js"></script>
+<script data-main="js/require" src="webjars/requirejs/2.3.6/require.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
