workList run working...

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
 </ul>
 
 <div id="content">
+    home
 </div>
 
 <script data-main="js/main" src="webjars/requirejs/2.3.6/require.min.js"></script>
