--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <ul id="nav">
+    <li><a href="#/home">home</a></li>
     <li><a href="#/workTime">moveWorkTimeMain</a></li>
     <li><a href="#/starlight">moveObserver</a></li>
 </ul>
