--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <title>Title</title>
 </head>
 <body>
@@ -9,7 +10,7 @@
 <ul id="nav">
     <li><a href="#/home">home</a></li>
     <li><a href="#/workTime">moveWorkTimeMain</a></li>
-    <li><a href="#/starlight">moveObserver</a></li>
+    <li><a href="#/observer">moveObserver</a></li>
 </ul>
 
 <div id="content">
